style.css
* {
  font-family: "Lato", sans-serif;
}

/*Header element*/
header {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 60px;
}

/*header logo*/
#logo-header {
  width: 100px;
  margin: 10px 0;
}

/*-----DROPDOWN BUTTONS------*/
/*Dropdown buttons div element*/
.dropdownButtons {
  padding: 0 50px;
}

/* Dropdown Button */
.dropbtn {
  background-color: white;
  color: #212b36;
  margin: 5px;
  font-size: 12px;
  border: none;
  cursor: pointer;
  line-height: 16px;
  font-weight: 550;
}

/* Dropdown button on hover & focus */
.dropbtn:hover,
.dropbtn:focus {
  background-color: #f4f4f4;
  height: 35px;
  border-radius: 20px;
}

.dropdown:not(:nth-child(5)) .dropbtn::after {
  content: url("./Images/down_arrowhead.svg");
  display: inline-block;
  vertical-align: middle; /*Align arrow to middle of line */
  width: 20px; /* set the width of the image */
  height: 20px; /* set the height of the image */
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
  font-weight: 550;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: white;
  min-width: 160px;
  width: 250px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  font-size: 13px;
  border-radius: 10px;
  padding: 10px 0;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: #212b36;
  padding: 10px 16px;
  text-decoration: none;
  display: block;
  border-radius: 10px;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #f4f4f4;
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
  display: block;
}

/*-----SEARCH BAR-----*/
/* Style for desktop/laptop */
.search-bar {
  display: block;
}

.search-box {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #f2f2f2;
  border-radius: 25px;
  padding: 5px;
  width: 300px;
  height: 27px;
}

.search-box input[type="text"] {
  border: none;
  outline: none;
  background-color: transparent;
  flex: 1;
  padding-left: 8px;
}

.search-box input[type="text"]::placeholder {
  color: #0b0b0b;
  font-size: 11.5px;
  font-weight: 400;
}

.search-box button {
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

#magnifyingGlassIcon {
  width: 11px;
  padding-left: 10px;
}

#microphoneIcon {
  width: 10px;
  margin-right: 10px;
  cursor: pointer;
}


@media only screen and (max-width: 767px) {
  .search-bar {
    display: none;
  }

  #microphoneIcon {
    display: none;
  }

  #magnifyingGlassIcon {
    display: block;
  }
}

/*------ HEADER RIGHT-HAND SIDE BUTTONS------*/

.right-hand-side-buttons{
  display: flex;
  margin-left: 10px;
}

#findUsButton, #saveButton, #logInButton {
  display: flex;
  flex-direction: column; /* change flex-direction to column */
  align-items: center;
  justify-content: center;
  text-align: center;

  width: 50px;
  font-size: 9px;
}

#findUsIcon, #saveIcon, #logInIcon {
  width: 20px;
}

#findUsIcon {
  margin: 3px 2px;
}

#saveIcon, #logInIcon {
  margin: 6px 2px;
}


/*Fonts*/

@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");

